--- a/views/idea_management_view.xml
+++ b/views/idea_management_view.xml
@@ -24,7 +24,7 @@
                         <button string="Aprobar" name='aprobar' type="object" invisible="state!='revision'" /> <!-- Si ponemos invisible="1" el botón sera invisible siempre -->
                         <button string="En proceso" name="proceso" type="object" invisible="state!='aprobada'" />
                         <button string="Completar" name="completada" type="object" invisible="state not in 'proceso,aprobada'"/>
-                        <button string="Votar" name="action_open_vote_form" type="object" invisible="state not in 'proceso,aprobada,completada'"/>
+                        <button string="Votar" name="open_vote_form" type="object" invisible="state not in 'proceso'"/>
                         <button string="Cancelar" name="cancelada" type="object" invisible="state not in 'revision,aprobada,proceso,completada'"/>
                         <field name="state" widget="statusbar"/>
                     </header>
@@ -64,6 +64,32 @@
                             <field name="activity_ids"/>
                             <field name="message_ids" options="{'post_refresh': 'recipients'}"/>
                     </div>
+            </form>
+        </field>
+    </record>
+
+    <record id="view_idea_vote_form" model="ir.ui.view">
+        <field name="name">view.idea_new_form</field>
+        <field name="model">idea.management</field>
+        <field name="arch" type="xml">
+            <form string="Voto">
+                <header>
+                    <field name="idea_id" readonly="1"/> 
+                </header>
+                <h1>Rating</h1>
+                <field name="rating" widget="priority"/>
+                <sheet>
+                    <group>
+                        <field name="comments"/>
+                    </group>
+                    <group>
+                        <field name="voter_id"/>
+                    </group>
+                </sheet>
+                <footer>
+                    <!-- <button string="Guardar" name="save" type="object" class="btn-primary"/> -->
+                    <button string="Cancelar" special="cancel" class="btn-secondary"/>                 
+                </footer>
             </form>
         </field>
     </record>
