--- a/views/idea_management_view.xml
+++ b/views/idea_management_view.xml
@@ -9,7 +9,7 @@
                 <field name="name"/>
                 <field name="state"/> 
                 <field name="idea_type"/>                
-                <field name="company_id"/> 
+                <field name="partner_id"/> 
             </tree>
         </field>
     </record>
@@ -42,7 +42,7 @@
                         </group>
 
                         <group>
-                            <field name="company_id" context="{'default_is_company': True}" domain="[('is_company', '=', True)]"/>                       
+                            <field name="partner_id" context="{'default_is_company': True}" domain="[('is_company', '=', True)]"/>                       
                             <field name="idea_type"/>
                             <field name="price"/>
                         </group>
@@ -90,7 +90,7 @@
                 <filter string="Estado" name="state" context="{'group_by':'state'}"/>
                 <separator string="Separador"/>
                 <filter string="Tipo de idea" name="idea_type" context="{'group_by':'idea_type'}"/>
-                <filter string="Compañía" name="company_id" context="{'group_by':'company_id'}"/>
+                <filter string="Compañía" name="partner_id" context="{'group_by':'partner_id'}"/>
             </search>
         </field>
     </record>
@@ -120,5 +120,16 @@
                 </footer>
             </form>
         </field>
+    </record>
+
+    <record id="action_report_idea_management" model="ir.actions.report">
+        <field name="name">Idea Report</field>
+        <field name="model">idea.management</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">ideas_module.report_idea_management</field>
+        <field name="report_file">ideas_module.report_idea_management</field>
+        <field name="print_report_name">'Idea - %s' % (object.name)</field>
+        <field name="binding_model_id" ref="model_idea_management"/>
+        <field name="binding_type">report</field>
     </record>
 </odoo>
