--- a/views/idea_menu.xml
+++ b/views/idea_menu.xml
@@ -5,7 +5,7 @@
             <field name="name">Ideas</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">idea.management</field>
-            <field name="view_mode">tree,form,calendar,graph</field>
+            <field name="view_mode">tree,kanban,calendar,pivot,graph,form</field>
             <field name="context">{}</field>                
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
