--- a/views/idea_management_view.xml
+++ b/views/idea_management_view.xml
@@ -143,6 +143,7 @@
         <field name="model">idea.management</field>
         <field name="arch" type="xml">
             <kanban default_group_by="employee_id">
+            <link rel="stylesheet" href="/ideas_module/static/src/css/style.css"/>
                 <field name="state" invisible="1"/>
                 <field name="idea_type" invisible="1"/>
                 <templates>
@@ -164,11 +165,9 @@
                             <div class="oe_kanban_bottom_right">
                                 <field name="employee_id" widget="many2one_avatar_user"/>
                             </div>
-                            <!-- Agregar colores y etiquetas según el estado o tipo de idea -->
                             <div class="o_kanban_tags">
                                 <span t-if="state === 'revision'" class="o_tag o_tag_color_green">En revisión</span>
                                 <span t-if="state === 'aprobada'" class="o_tag o_tag_color_blue">Aprobada</span>
-                                <!-- Agregar más etiquetas para otros estados -->
                             </div>
                             <div class="o_kanban_quick_actions">
                                 <button name="change_state" class="btn btn-sm btn-primary" type="object" title="Cambiar estado">Cambiar Estado</button>
@@ -179,8 +178,6 @@
             </kanban>
         </field>
     </record>
-    
-    
     
 
     <record id="view_idea_vote_form" model="ir.ui.view">
