--- a/views/idea_management_view.xml
+++ b/views/idea_management_view.xml
@@ -151,27 +151,35 @@
                 <field name="state" invisible="1"/>
                 <field name="idea_type" invisible="1"/>
                 <templates>
+                    <t t-name="kanban-menu">
+                        <t t-if="widget.editable"><a role="menuitem" class="dropdown-item" data-type="edit">Edit</a></t>
+                        <t t-if="widget.deletable"><a role="menuitem" class="dropdown-item" data-type="delete">Delete</a></t>
+                    </t>
                     <t t-name="kanban-box">
-                        <div t-attf-class="oe_kanban_content oe_kanban_global_click">
-                            <div class="o_kanban_record_title">
-                                <strong><field name="name"/></strong>
-                                <span t-if="idea_type"/>
-                            </div>
+                            <div class="oe_kanban_content flex-grow-1">
+                                <div class="oe_kanban_details">
+                                    <strong class="o_kanban_record_title"><field name="name"/></strong>
+                                </div> 
                             <div class="o_kanban_record_subtitle">
                                 <field name="create_date"/>
-                                <field name="state"/>
                             </div>
                             <div class="oe_kanban_bottom_left">
-                                <div class="o_kanban_inline_block">
-                                    <field name="activity_ids" widget="kanban_activity"/>
-                                </div>
-                            </div>
-                            <div class="oe_kanban_bottom_right">
-                                <field name="employee_id" widget="many2one_avatar_user"/>
+                                <field name="state"/>
                             </div>
                             <div class="o_kanban_quick_actions">
                                 <button name="change_state" class="btn btn-sm btn-primary" type="object" title="Cambiar estado">Cambiar Estado</button>
                             </div>
+                            <div class="oe_kanban_footer">
+                            <div class="o_kanban_record_bottom">
+                                <div class="oe_kanban_bottom_left">
+                                    <field name="price" widget="monetary"/>
+                                    <field name="activity_ids" widget="kanban_activity"/>
+                                </div>
+                                <div class="oe_kanban_bottom_right">
+                                    <field name="employee_id" widget="many2one_avatar_user"/>
+                                </div>
+                            </div>
+                        </div>
                         </div>
                     </t>
                 </templates>
